Fix two layout bugs

--- a/css/default.css
+++ b/css/default.css
@@ -49,6 +49,7 @@ p {
 h1, h2, h3 {
   font-weight: 400;
   line-height: 1.1;
+  word-wrap: break-word;
 }
 
 h1 {
